package org.example.themovingcompany.model;

public enum PersonRole {
    CUSTOMER,
    CONSULTANT
}
