package org.example.themovingcompany.model.enums;


//Enum for the type of service requested in an order.
public enum ServiceType {
    MOVING,    // Moving from one location to another
    PACKING,   // Packing items before moving
    CLEANING   // Cleaning before or after the move
}

